--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
-.App {
+
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Encode Sans Expanded',
+  sans-serif ;
+}
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +48,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
